--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "json"
   ],
   "version": "4.0.0",
-  "homepage": "http://aikar.co/wormhole",
+  "homepage": "https://github.com/Kumite23/crew-launchpad",
   "repository": {
     "type": "git",
     "url": "git://github.com/Kumite23/crew-launchpad"
